# SE4-DEDS-Pyhton-opdrachten

./: README.md  license.txt  pyproject.toml
1/: Week 1 opdrachten.docx
2.1/: Practicum_2.1_Opdrachten.ipynb
2.2/: Practicum_2.2_Opdrachten.ipynb  README.md
2.3/: Practicum_2.3_Opdrachten_Raoul.ipynb  Practicum_2.3_Opdrachten_Tjorn.ipynb
3.1/: Practicum_3.1_Raoul.ipynb  Practicum_3.1_Tjorn.ipynb
3.2/: Practicum_3.2.ipynb
week 1/: 1.3.drawio  GreatOutdoors.archimate.xml
week 10/: Practicum_10.ipynb
week 2/2.1/: README.md
week 2/2.2/: Practicum_2.2_Opdrachten_Raoul.ipynb  Practicum_2.2_Opdrachten_Tjorn.ipynb
week 3/3.2/: Practicum_3.2.ipynb
week 4/: TODO.txt
week 4 5/4 5/: Practicum_4-5.ipynb
week 4 5/4 5/src/: DEDS_DataWarehouse_Creation_Script.sql  main.py  processing.py
week 4 5/4.1/: Week 4 opdrachten.docx
week 4/4.3/: DEDS_DataWarehouse_Creation_Script.sql  Practicum_4-5.ipynb  Practicum_4.3.ipynb  Practicum_4.3.py  triggers.sql
week 4/4.3/src/: DEDS_DataWarehouse_Creation_Script.sql  __init__.py  main.py  processing.py  settings.py
week 6/: Practicum_6.pbix  managementvragen.md
week 7/: Generatieve AI Presentatie.pptx  Onderoek generatieve AI-Tjorn Brederoo en Raoul Nedermeijer.docx
week 8/8.1/: Practicum_8.1.ipynb
week 8/8.2/: Practicum_8.2.ipynb
week 9/9.1/: Practicum_9.1.ipynb
week 9/9.2/: Practicum_9.2.ipynb
