[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Tjorn <74906283+Nrojt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.1"
pyodbc = "^5.1.0"
notebook = "^7.1.1"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
